--- a/1326/package.json
+++ b/1326/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "1236",
+  "name": "1326",
   "version": "1.0.0",
-  "description": "",
+  "description": "My solution to problem 1326 of LeetCode",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jamie Pendergast",
   "license": "ISC"
 }
